[package]
name = "osc"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.10.0"
errno = "0.3.5"
libc = "0.2.149"
log = "0.4.20"
osc_codegen = { path = "../osc_codegen" }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
serde_repr = "0.1.16"
thiserror = "1.0.49"
